--- a/client/src/styles/TaskLists.module.css
+++ b/client/src/styles/TaskLists.module.css
@@ -1,9 +1,10 @@
 .summaryWrapper{
     display: grid;
     flex-direction: row;
-    grid-template-columns: repeat(5, minmax(10px,200px));
-    grid-template-rows: repeat(3, minmax(10px,1fr));
+    grid-template-columns: repeat(auto-fit, 1fr);
+    grid-template-rows: repeat(auto-fit, minmax(10px,1fr));
     grid-auto-flow: row;
+    width: 100%;
     /*
     grid-template-columns: repeat(5, minmax(10px,1fr));
     grid-template-rows: repeat(3, minmax(10px,1fr));
@@ -31,6 +32,7 @@
     margin: auto;
     scroll-margin: 200px;
 }
+
 
 .wrapper{
     display: flex;
@@ -61,7 +63,10 @@
 .status{
     grid-column: 2;
     grid-row: 1;
-    padding-left: 40px;
+}
+.statusData{
+    grid-column: 3;
+    grid-row: 1;
 }
 .published{
     font-weight: bold;
@@ -71,14 +76,10 @@
     font-weight: bold;
     color: orange;
 }
-.statusData{
-    grid-column: 3;
-    grid-row: 1;
-}
+
 .tasksLength{
     grid-column: 2;
     grid-row: 2;
-    padding-left: 40px;
 }
 .tasksLengthData{
     grid-column: 3;
@@ -103,6 +104,8 @@
 .editBtn{
     grid-column: 5;
     grid-row: 3;
+    display: flex;
+    justify-content: flex-end;
 }
 .text{
     font-weight: bold;
@@ -127,5 +130,10 @@
     border: 1px black solid;
     border-radius: 25px;
     margin: 2px;
+}
+
+.accordionWrapper button{
+    min-width: 20px;
+    max-width: 100px;
 }
 
