--- a/client/src/styles/Home.module.css
+++ b/client/src/styles/Home.module.css
@@ -6,9 +6,9 @@
     align-items: center;
     grid-template-rows: 50px 1fr;
     margin: 0 20vw;
-    min-width: 500px;
+    min-width: 250px;
     max-height: 188px;
-    min-height: 500px;
+    min-height: 250px;
     /*padding: 80px 50px 50px 50px;*/
     
     /*-webkit-backdrop-filter: blur(300px);
@@ -30,7 +30,6 @@
 .img{
     z-index: 10;
     grid-row: 0;
-    height: 100px;
     width: 100px;
     margin: 60px 0 0 20px;
 }
@@ -40,4 +39,27 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+}
+
+@media screen and (max-width: 650px){
+    .wrapper{
+        height: auto;
+    }
+
+    .content{
+        margin-bottom: 0;
+        padding: 2em;
+    }
+
+    h2{
+        font-size: 1.2em;
+    }
+
+    p{
+        font-size: 0.8em;
+    }
+
+    .img{
+        width: 50px;
+    }
 }
