--- a/client/src/styles/NoMatch.module.css
+++ b/client/src/styles/NoMatch.module.css
@@ -18,4 +18,16 @@
 .errCode, .errText{
     font-weight: bold;
     font-size: 80px;
+    text-align: center;
+}
+
+@media screen and (max-width: 650px){
+   .content{
+    padding: 10px;
+   }
+
+   .errCode, .errText{
+    font-weight: bold;
+    font-size: 40px;
+}
 }
