--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,13 @@
+:root{
+  --fs-400: clamp(.5rem, 1rem, 1rem);
+}
+
+@media screen and (max-width: 768px){
+  :root{
+      --fs-400: clamp(.5rem, .8rem, 1rem);
+  }
+}
+
 body {
   margin: 0;
   height: 100%;
@@ -29,7 +39,8 @@ code {
 
 html{
   height: 100%;
-
+  min-height: 500px;
+  min-width: 250px;  
 }
 
 #root{
