--- a/client/src/styles/Nav.module.css
+++ b/client/src/styles/Nav.module.css
@@ -38,9 +38,13 @@ nav div a{
 nav{
     position: absolute;
     min-width: 250px;
-    display: flex;
-    gap: 20px;
     width: 100%;
+}
+
+.navContent{
+    position: relative;
+    z-index: 20;
+    display: flex;
     background-color:black;
 }
 
@@ -61,56 +65,54 @@ nav{
     display: none;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 5px;
     width: 50px;
-    height: 100%;
     margin-right: 10px;
 }
 
 .sideMenu{
-    z-index: 50;
+    z-index: 20;
     width: 100%;
     position: absolute;
     transition: top .5s ease-in-out;
-    top: -300%;
+    top: -500%;
     background-color: black;
 }
 
 .sideMenuContent{
     display: flex;
     flex-direction: column;
-    gap: 5px;
     align-items: center;
 }
 
 .sideMenu a{
     text-decoration: none;
     color: white;
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
 }
 
 .activeMenu{
     top: 100%;
 }
 
-@media not screen and (max-width: 650px){
+@media not screen and (max-width: 835px){
     .sideMenu{
         display: none;
     }
 }
-@media screen and (max-width: 650px){
-    nav > .link:not(.home){
+@media screen and (max-width: 835px){
+    .navContent > .link:not(.home){
         display: none;
     }
 
-    nav{
+    .navContent{
         justify-content: space-between;
     }
 
     .burgerMenu{
         display: flex;
-    }
-
-    .sideMenu{
-        
     }
 }
