--- a/client/src/styles/Profile.module.css
+++ b/client/src/styles/Profile.module.css
@@ -4,6 +4,7 @@ p{
 
 .wrapper{
     
+    margin-top: 50px;
     height: inherit;
     display: flex;
     justify-content: center;
@@ -93,4 +94,42 @@ a{
 .btn img{
     height: 40px;
     width: 40px;
+}
+
+@media screen and (max-width: 425px){
+
+    .userProfile{
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        padding: 20px 10px;
+        border-radius: 25px;
+        align-items: center;
+        gap: 10px;
+    }
+
+
+    .logo img{
+        width: 100px;
+        height: 100px;
+        padding: 0;
+    }
+
+    .content div{
+        font-size: 1rem;
+    }
+
+    .aspects{
+        margin-left: 10px;
+    }
+
+    .data{
+        margin-right: 10px;
+    }
+
+    .btn img{
+        height: 20px;
+        width: 20px;
+    }
+    
 }
